src/tests/snapshots/ppl__tests__empty_block.error.snap
---
source: src/tests/mod.rs
expression: err
---
Error: parser::empty_block

  × empty blocks are disallowed
   ╭─[src/main.ppl:1:1]
 1 │ loop:
   · ──┬─
   ·   ╰── this item has empty block
   ╰────
